# qml

./: CMakeLists.txt  RODAR_LINUX.sh  main.cpp
.github/workflows/: build-linux.yml
qml/: ConsultasScreen.qml  Database.qml  ExamesScreen.qml  HomeScreen.qml  LabeledField.qml  LoginScreen.qml  MedCrossLogo.qml  PerfilScreen.qml  RegisterScreen.qml  RoleSelectScreen.qml  SettingsScreen.qml  WelcomeScreen.qml  main.qml  test_perfil.qml  test_transition.qml
